html structure changes

--- a/index.html
+++ b/index.html
@@ -17,21 +17,17 @@
 <!--Header-->
 <header>
     <h2 class="regular secondary">Curriculum vitae</h2>
-</header>
 
-<!--Content-->
-<main>
-
-    <!--About me-->
-    <article>
-        <section>
+     <!--About me-->
+     <section>
+        <article>
             <h1><span class="emojis" aria-hidden="true">🤙 </span>Soy Álvaro Molina, <i class="accent regular">diseñador de producto</i></h1>
 
             <div class="content-block">
                 <h5 class="secondary">Sobre mi</h5>
-                <p>Mi objetivo es crear soluciones que contribuyan a mejorar el entorno que nos rodea, tratar de hacer más cómoda la vida de las personas y disfrutar mucho durante el proceso.
-                <br><br>
-                Actualmente llevo más de 2 años trabajando como diseñador de producto en Genially aunque durante los últimos 9 años me he enfrentado a proyectos de diseño de IU, Design system, Motion design, Web design y Graphic design. Además durante 5 de estos años he trabajado en proyectos audiovisuales como técnico audiovisual, director de fotografía y operador de cámara.</p>
+                <p>Mi objetivo es crear soluciones que contribuyan a mejorar el entorno que nos rodea, tratar de hacer más cómoda la vida de las personas y disfrutar mucho durante el proceso.</p>
+                <br>
+                <p>Actualmente llevo más de 2 años trabajando como diseñador de producto en Genially aunque durante los últimos 9 años me he enfrentado a proyectos de diseño de IU, Design system, Motion design, Web design y Graphic design. Además durante 5 de estos años he trabajado en proyectos audiovisuales como técnico audiovisual, director de fotografía y operador de cámara.</p>
             </div>
             
             <div class="content-block">
@@ -47,13 +43,17 @@
             </div>
 
             <a class="action right" href="#contact" rel="noopener noreferrer" aria-label="Botón de navegación para ir a la sección de la página que contiene los datos de contacto" title="Botón de navegación para ir a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
-        </section>
-    </article>
+        </article>
+    </section>
+</header>
+
+<!--Content-->
+<main>
 
     <!--Experience-->
-    <article>
+    <section>
         <h1><span class="emojis" aria-hidden="true">💼 </span>Experiencia</h1>
-        <section class="content-highlighted">
+        <article class="content-highlighted">
             <h5 class="secondary">Puesto actual</h5>
             <div class="content-block">
                 <h3>Diseñador de producto en <a href="https://genially.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la empresa" title="Enlace a la página web de la empresa">Genially<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
@@ -79,9 +79,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <div class="content-block">
                 <h3>Diseñador de IU & Sistema de diseño en <a href="https://genially.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la empresa" title="Enlace a la página web de la empresa">Genially<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Julio 2020 - Enero 2022 (Remoto)</i></p>
@@ -103,9 +103,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <div class="content-block">
                 <h3>Diseñador gráfico en <a href="https://genially.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la empresa" title="Enlace a la página web de la empresa">Genially<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Junio 2019 - Julio 2020 (Córdoba)</i></p>
@@ -127,9 +127,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <div class="content-block">
                 <h3>Diseñador gráfico independiente</h3>
                 <p><i>Enero 2018 - Noviembre 2021</i></p>
@@ -153,9 +153,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <div class="content-block">
                 <h3>Profesional Audiovisual independiente</h3>
                 <p><i>Febrero 2014 - Junio 2019</i></p>
@@ -181,13 +181,13 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </article>
+        </article>
+    </section>
 
     <!--Volunteer-->
-    <article>
+    <section>
         <h1><span class="emojis" aria-hidden="true">🛟 </span>Voluntariado</h1>
-        <section class="content-highlighted">
+        <article class="content-highlighted">
             <h5 class="secondary">Colaboración en curso</h5>
             <div class="content-block">
                 <h3>Colaborador en <a href="https://www.cicbata.org/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la asociación" title="Enlace a la página web de la asociación">CiC-Batá<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
@@ -209,9 +209,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <div class="content-block">
                 <h3>Colaboración con <a href="https://www.ajdem.org/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la asociación" title="Enlace a la página web de la asociación">AJDEM<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Noviembre 2013 (Jaén)</i></p>
@@ -232,50 +232,50 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </article>
+        </article>
+    </section>
 
     <!--Education-->
-    <article>
+    <section>
         <h1><span class="emojis" aria-hidden="true">📕 </span>Educación y Cursos formativos</h1>
-        <section class="content-highlighted">
+        <article class="content-highlighted">
             <h5 class="secondary">Formación en progreso</h5>
             <div class="content-block">
                 <h3 class="regular"><a href="https://www.designgraduate.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la escuela" title="Enlace a la página web de la escuela">Design Graduate<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Instituto Tramontana, 2023 - <b class="accent">Actualidad </b>(Remoto)</i></p>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <div class="content-block">
                 <h3>EEAASS de Diseño Gráfico</h3>
                 <p><i>EASD Mateo Inurria, 2015 - 2020 (Córdoba)</i></p>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <div class="content-block">
                 <h3 class="regular">Técnico Profesional en Diseño Web Avanzado con CSS3</h3>
                 <p><i>INESEM, 2019 (Online)</i></p>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <div class="content-block">
                 <h3>CFGS Iluminación, Captación y Tratamiento de imagen</h3>
                 <p><i>IES Auringis, 2013 - 2015 (Jaén)</i></p>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <div class="content-block">
                 <h3>Bachillerato en Artes plásticas, Diseño e Imagen</h3>
                 <p><i>IES Huarte de San Juan, 2010 - 2013 (Linares)</i></p>
             </div>
-        </section>
+        </article>
 
         <h2>Otros cursos</h2>
-        <section>
+        <article>
             <div class="content-block">
                 <h5 class="secondary">Microcursos</h5>
                 <ul>
@@ -290,8 +290,8 @@
                     <li>Curso presencial de montaje y postproducción de video, UPMJ, <i>2014 (Jaén)</i></li>
                 </ul>
             </div>
-        </section>
-        <section>
+        </article>
+        <article>
             <div class="content-block">
                 <h5 class="secondary">Workshops</h5>
                 <ul>
@@ -300,8 +300,8 @@
                     <li>Comunicación visual y Visual Thinking: Piensa mejor y comunica más rápido, Sara Martínez - 5 Palabras, <i>2020 (Online)</i></li>
                 </ul>
             </div>
-        </section>
-        <section>
+        </article>
+        <article>
             <div class="content-block">
                 <h5 class="secondary">Idiomas</h5>
                 <ul>
@@ -309,8 +309,8 @@
                     <li>Curso de ingles nivel Upper intermediate (B2), Arena School of English, <i>2013 (Dublín)</i></li>
                 </ul>
             </div>
-        </section>
-        <section>
+        </article>
+        <article>
             <div class="content-block">
                 <h5 class="secondary">Cursos</h5>
                 <ul>
@@ -318,13 +318,13 @@
                     <li>Adobe Illustrator: "Maestro en 70h" + "Pro en 35h" + "Maestría en ilustración vectorial" + "Maestría en tipografía ilustrada", Megacursos.com, <i>2016 (Online)</i></li>
                 </ul>
             </div>
-        </section>
-    </article>
+        </article>
+    </section>
 
     <!--Acknowledgements-->
-    <article>
+    <section>
         <h1><span class="emojis" aria-hidden="true">🏅 </span>Reconocimientos</h1>
-        <section>
+        <article>
             <div class="content-block">
                 <h3>Premio a la Mejor Dirección de Fotografía en VI Rodando por Jaén</h3>
                 <p><i>Septiembre 2018 (Jaén)</i></p>
@@ -336,23 +336,24 @@
                     <p>Premio expedido por la Diputación de Jaén por el Cortometraje Habitación 205. <a href="https://jaenaudiovisual.es/palmares-del-vi-rodando-por-jaen/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver la nota de prensa" title="Enlace a otra página web para ver la nota de prensa">Ver nota de prensa<span class="emojis" aria-hidden="true"> ↗</span></a>.</p>
                 </div>
             </div>
-        </section>
-    </article>
+        </article>
+    </section>
 
+<!--Footer-->
+<footer>
+    
     <!--Contact-->
-    <article  id="contact">
+    <section id="contact">
         <h1><span class="emojis" aria-hidden="true">🤝 </span>¡Contactemos!</h1>
-        <section>
+        <article>
             <div class="content-block">
                 <p><span class="emojis" aria-hidden="true">👤 </span><b>Linkedin</b>: <a href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Enlace al perfil de Linkedin" title="Enlace al perfil de Linkedin">@alvaromolinaruiz<span class="emojis" aria-hidden="true"> ↗</span></a></p>
                 <p><span class="emojis" aria-hidden="true">✉️ </span><b>Correo</b>: <a href="mailto:alvaromolrui@gmail.com" aria-label="Enlace para enviar un correo electrónico" title="Enlace para enviar un correo electrónico">alvaromolrui@gmail.com<span class="emojis" aria-hidden="true"> ↗</span></a></p>
                 <p><span class="emojis" aria-hidden="true">📱 </span><b>Teléfono</b>: <a href="tel:+34653265884" aria-label="Enlace para llamar por teléfono" title="Enlace para llamar por teléfono">(+34) 653 26 58 84<span class="emojis" aria-hidden="true"> ↗</span></a></p>
             </div>
-        </section>
-    </article>
+        </article>
+    </section>
 
-<!--Footer-->
-<footer>
     <a class="action right" href="#home" rel="noopener noreferrer" aria-label="Botón de navegación para volver al principio de la página" title="Botón de navegación para volver al principio de la página">Volver arriba<span class="emojis" aria-hidden="true"> ↑</span></a>
 
     <div class="content-block">
