html structure changes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <!--Header-->
 <header>
     <h2 class="regular secondary">Curriculum vitae</h2>
+</header>
+
+<!--Content-->
+<main>
 
      <!--About me-->
      <section>
@@ -45,10 +49,6 @@
             <a class="action right" href="#contact" rel="noopener noreferrer" aria-label="Botón de navegación para ir a la sección de la página que contiene los datos de contacto" title="Botón de navegación para ir a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
         </article>
     </section>
-</header>
-
-<!--Content-->
-<main>
 
     <!--Experience-->
     <section>
@@ -80,6 +80,8 @@
                 </div>
             </div>
         </article>
+
+        <h2>Experiencias anteriores</h2>
 
         <article>
             <div class="content-block">
@@ -211,6 +213,8 @@
             </div>
         </article>
 
+        <h2>Colaboraciones anteriores</h2>
+
         <article>
             <div class="content-block">
                 <h3>Colaboración con <a href="https://www.ajdem.org/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la asociación" title="Enlace a la página web de la asociación">AJDEM<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
@@ -245,6 +249,8 @@
                 <p><i>Instituto Tramontana, 2023 - <b class="accent">Actualidad </b>(Remoto)</i></p>
             </div>
         </article>
+
+        <h2>Formación anterior</h2>
 
         <article>
             <div class="content-block">
@@ -339,9 +345,6 @@
         </article>
     </section>
 
-<!--Footer-->
-<footer>
-    
     <!--Contact-->
     <section id="contact">
         <h1><span class="emojis" aria-hidden="true">🤝 </span>¡Contactemos!</h1>
@@ -354,6 +357,10 @@
         </article>
     </section>
 
+</main>
+
+<!--Footer-->
+<footer>
     <a class="action right" href="#home" rel="noopener noreferrer" aria-label="Botón de navegación para volver al principio de la página" title="Botón de navegación para volver al principio de la página">Volver arriba<span class="emojis" aria-hidden="true"> ↑</span></a>
 
     <div class="content-block">
