--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <main>
 
      <!--About me-->
-     <section aria-label="">
+     <section aria-label="Sección en la que hablo un poco sobre mi">
         <article>
             <h1><span class="emojis" aria-hidden="true">🤙 </span>Soy Álvaro Molina, <i class="accent regular">diseñador de producto</i></h1>
 
@@ -45,15 +45,15 @@
                     <mark>#Investigación de usuarios</mark>
                 </div>
             </section>
-            
-            <nav>
-                <a class="action right" href="#contact" rel="noopener noreferrer" aria-label="Botón de navegación para ir a la sección de la página que contiene los datos de contacto" title="Botón de navegación para ir a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
-            </nav>
+
+            <section aria-label="" class="right">
+                <a class="action" href="#contact" rel="noopener noreferrer" aria-label="Botón de navegación para ir directamente a la sección de la página que contiene los datos de contacto" title="Botón de navegación para ir directamente a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
+            </section>
         </article>
     </section>
 
     <!--Experience-->
-    <section aria-label="">
+    <section aria-label="Sección en la que muestro mi experiencia profesional">
         <h1><span class="emojis" aria-hidden="true">💼 </span>Experiencia</h1>
         <article class="content-highlighted">
             <h5 class="secondary">Puesto actual</h5>
@@ -63,7 +63,7 @@
             </section>
 
             <aside>
-                <section aria-label="">
+                <section aria-label="Descripción de mi puesto como Diseñador de producto en Genially">
                     <h5 class="secondary">Descripción</h5>
                     <p>Enfocado en facilitar la creación de experiencias comunicativas diferenciadoras en el ámbito formativo, académico y profesional, a través del uso de efectos, interactividad y animación, planteando soluciones para la experiencia e interfaz de usuario llevando a cabo un proceso de diseño completo, involucrándome desde la detección de oportunidades hasta la evaluación de las soluciones tras la implementación.</p>
                 </section>
@@ -91,9 +91,9 @@
                 <p><i>Julio 2020 - Enero 2022 (Remoto)</i></p>
             </section>
 
-            <aside>
-                <section aria-label="">
-                    <h5 class="secondary">Descripción</h5>
+            <details open><summary class="secondary">Descripción</summary>
+                <section  aria-label="Descripción de mi puesto como Diseñador de IU & Sistema de diseño en Genially">
+                    <!--<h5 class="secondary">Descripción</h5>-->
                     <p>Creando las bases del sistema de diseño, documentando, diseñando los componentes fundamentales y definiendo patrones básicos de diseño, buscando la máxima escalabilidad y con gran atención a la viabilidad de implementación dado que hasta el momento no existía sistema de diseño. Además durante esta etapa estuve participando en el diseño de la página web construyendo un sistema modular que permitiera al equipo de contenidos crear páginas a través de un content manager personalizado. También participé rediseñando diferentes partes de la IU de la aplicación.</p>
                 </section>
 
@@ -106,7 +106,7 @@
                         <mark>#Animación</mark>
                     </div>
                 </section>
-            </aside>
+            </details>
         </article>
 
         <article>
@@ -116,7 +116,7 @@
             </section>
 
             <aside>
-                <section aria-label="">
+                <section aria-label="Descripción de mi puesto como Diseñador gráfico en Genially">
                     <h5 class="secondary">Descripción</h5>
                     <p>Creando diseños para plantillas de creaciones de diferentes temáticas, estéticas y de contenidos, ofrecidas a través del catálogo de plantillas. También trabajé creando colecciones de recursos gráficos ofrecidos en los catálogos de recursos de la aplicación y proponiendo mejoras en la categorización, organización y gestionando todo lo relacionado con la creación y publicación de estos. Además también colaboré con el equipo de marketing en la creación de contenidos visuales para campañas comunicación.</p>
                 </section>
@@ -140,7 +140,7 @@
             </section>
 
             <aside>
-                <section aria-label="">
+                <section aria-label="Descripción de mi puesto como Diseñador gráfico independiente">
                     <h5 class="secondary">Descripción</h5>
                     <p>Creando marcas e identidades visuales corporativas, haciendo diseño editorial y haciendo motion graphics. Además también he ilustrado (algo) y he colaborado en algunos proyectos en la parte de diseño y maquetación web.</p>
                 </section>
@@ -166,7 +166,7 @@
             </section>
 
             <aside>
-                <section aria-label="">
+                <section aria-label="Descripción de mi puesto como Profesional Audiovisual independiente">
                     <h5 class="secondary">Descripción</h5>
                     <p>Trabajando como director de fotografía y operador de cámara en proyectos de cine, publicidad, videoclips, vídeos corporativos, conciertos, eventos en directo, etc. También realizando tareas como Editor y Postproductor de vídeo. Y algunos trabajos de fotografía y vídeos en bodas, bautizos y comuniones además de fotografía en eventos.</p>
                 </section>
@@ -189,7 +189,7 @@
     </section>
 
     <!--Volunteer-->
-    <section aria-label="">
+    <section aria-label="Sección en la que enseño las colaboraciones con asociaciones">
         <h1><span class="emojis" aria-hidden="true">🛟 </span>Voluntariado</h1>
         <article class="content-highlighted">
             <h5 class="secondary">Colaboración en curso</h5>
@@ -199,7 +199,7 @@
             </section>
 
             <aside>
-                <section aria-label="">
+                <section aria-label="Descripción de mi colaboración con CiC-Batá">
                     <h5 class="secondary">Descripción</h5>
                     <p>Llevando a cabo un proyecto de investigación para encontrar soluciones que faciliten el acceso a la tecnología y la reducción de la brecha digital en personas mayores. <a href="https://view.genially.com/65d763a85b5dfb0014dd1b29" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver documento con las conclusiones de la investigación" title="Enlace a otra página web para ver documento con las conclusiones de la investigación">Ver conclusiones<span class="emojis" aria-hidden="true"> ↗</span></a>.</p>
                 </section>
@@ -224,7 +224,7 @@
             </section>
 
             <aside>
-                <section aria-label="">
+                <section aria-label="Descripción de mi colaboración con la AJDEM">
                     <h5 class="secondary">Descripción</h5>
                     <p>Creando el cartel para el Día Nacional de la Esclerosis Múltiple donde pude desarrollar la idea, realizar la sesión fotográfica y componer el cartel.</p>
                 </section>
@@ -242,30 +242,42 @@
     </section>
 
     <!--Education-->
-    <section aria-label="">
+    <section aria-label="Sección en la que reflejo mi formación">
         <h1><span class="emojis" aria-hidden="true">📕 </span>Educación y Cursos formativos</h1>
         <article class="content-highlighted">
             <h5 class="secondary">Formación en progreso</h5>
             <section aria-label="">
-                <h3 class="regular"><a href="https://www.designgraduate.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la escuela" title="Enlace a la página web de la escuela">Design Graduate<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
+                <h3>Grado de Diseño de producto digital <a href="https://www.designgraduate.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la escuela" title="Enlace a la página web de la escuela">Design Graduate<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Instituto Tramontana, 2023 - <b class="accent">Actualidad </b>(Remoto)</i></p>
             </section>
+
+            <aside>
+                <section>
+                    <p><i>Titulación no reglada.</i></p>
+                </section>
+            </aside>
         </article>
 
         <h2>Formación anterior</h2>
 
         <article>
             <section aria-label="">
-                <h3>EEAASS de Diseño Gráfico</h3>
+                <h3>EAS de Diseño Gráfico</h3>
                 <p><i>EASD Mateo Inurria, 2015 - 2020 (Córdoba)</i></p>
             </section>
         </article>
 
         <article>
             <section aria-label="">
-                <h3 class="regular">Técnico Profesional en Diseño Web Avanzado con CSS3</h3>
+                <h3>Profesional en Diseño Web Avanzado con CSS3</h3>
                 <p><i>INESEM, 2019 (Online)</i></p>
             </section>
+
+            <aside>
+                <section>
+                    <p><i>Titulación no reglada.</i></p>
+                </section>
+            </aside>
         </article>
 
         <article>
@@ -282,7 +294,7 @@
             </section>
         </article>
 
-        <h2>Otros cursos</h2>
+        <h2>Otra formación</h2>
         <article>
             <section aria-label="">
                 <h5 class="secondary">Microcursos</h5>
@@ -330,7 +342,7 @@
     </section>
 
     <!--Acknowledgements-->
-    <section aria-label="">
+    <section aria-label="Sección en la que destaco los reconocimientos que he recibido">
         <h1><span class="emojis" aria-hidden="true">🏅 </span>Reconocimientos</h1>
         <article>
             <section aria-label="">
@@ -339,7 +351,7 @@
             </section>
 
             <aside>
-                <section aria-label="">
+                <section aria-label="Descripción del premio a Mejor Dirección de Fotografía">
                     <h5 class="secondary">Descripción</h5>
                     <p>Premio expedido por la Diputación de Jaén por el Cortometraje Habitación 205. <a href="https://jaenaudiovisual.es/palmares-del-vi-rodando-por-jaen/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver la nota de prensa" title="Enlace a otra página web para ver la nota de prensa">Ver nota de prensa<span class="emojis" aria-hidden="true"> ↗</span></a>.</p>
                 </section>
@@ -348,8 +360,8 @@
     </section>
 
     <!--Contact-->
-    <section id="contact">
-        <h1><span class="emojis" aria-hidden="true">🤝 </span>¡Contactemos!</h1>
+    <section id="contact" aria-label="Sección en la que he dejado mis datos de contacto">
+        <h1><span class="emojis" aria-hidden="true">🤝 </span>¿Hablamos?</h1>
         <article>
             <section aria-label="">
                 <p><span class="emojis" aria-hidden="true">👤 </span><b>Linkedin</b>: <a href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Enlace al perfil de Linkedin" title="Enlace al perfil de Linkedin">@alvaromolinaruiz<span class="emojis" aria-hidden="true"> ↗</span></a></p>
@@ -361,14 +373,12 @@
 
 </main>
 
-<!--Nav-->
-<nav>
-    <a class="action right" href="#home" rel="noopener noreferrer" aria-label="Botón de navegación para volver al principio de la página" title="Botón de navegación para volver al principio de la página">Volver arriba<span class="emojis" aria-hidden="true"> ↑</span></a>
-</nav>
-
 <!--Footer-->
 <footer>
+    <a class="action right" href="#home" rel="noopener noreferrer" aria-label="Botón de navegación para volver al principio de la página" title="Botón de navegación para volver al principio de la página">Volver arriba<span class="emojis" aria-hidden="true"> ↑</span></a>
+
     <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2<span class="emojis" aria-hidden="true"> ↗</span></a>, tratando de garantizar el nivel AAA.</p>
+
     <p class="small secondary">Si quieres puedes <a href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Enlace para descargar la versión PDF del curriculum vitae" title="Enlace para descargar la versión PDF del curriculum vitae">descargar la versión PDF<span class="emojis" aria-hidden="true"> ↴</span></a>.</p>
 </footer>
 
