--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 <p><i>Julio 2020 - Enero 2022 (Remoto)</i></p>
             </section>
 
-            <details open><summary class="secondary">Descripción</summary>
+            <aside>
                 <section  aria-label="Descripción de mi puesto como Diseñador de IU & Sistema de diseño en Genially">
-                    <!--<h5 class="secondary">Descripción</h5>-->
+                    <h5 class="secondary">Descripción</h5>
                     <p>Creando las bases del sistema de diseño, documentando, diseñando los componentes fundamentales y definiendo patrones básicos de diseño, buscando la máxima escalabilidad y con gran atención a la viabilidad de implementación dado que hasta el momento no existía sistema de diseño. Además durante esta etapa estuve participando en el diseño de la página web construyendo un sistema modular que permitiera al equipo de contenidos crear páginas a través de un content manager personalizado. También participé rediseñando diferentes partes de la IU de la aplicación.</p>
                 </section>
 
@@ -106,7 +106,7 @@
                         <mark>#Animación</mark>
                     </div>
                 </section>
-            </details>
+            </aside>
         </article>
 
         <article>
