--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 </div>
             </section>
 
-            <section aria-label="" class="right">
-                <a class="action" href="#contact" rel="noopener noreferrer" aria-label="Botón de navegación para ir directamente a la sección de la página que contiene los datos de contacto" title="Botón de navegación para ir directamente a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
-            </section>
+            <nav>
+                <a class="action right" href="#contact" rel="noopener noreferrer" aria-label="Botón de navegación para ir directamente a la sección de la página que contiene los datos de contacto" title="Botón de navegación para ir directamente a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
+            </nav>
         </article>
     </section>
 
@@ -62,7 +62,7 @@
                 <p><i>Enero 2022 - <b class="accent">Actualidad </b>(Remoto)</i></p>
             </section>
 
-            <aside>
+            <div class="description">
                 <section aria-label="Descripción de mi puesto como Diseñador de producto en Genially">
                     <h5 class="secondary">Descripción</h5>
                     <p>Enfocado en facilitar la creación de experiencias comunicativas diferenciadoras en el ámbito formativo, académico y profesional, a través del uso de efectos, interactividad y animación, planteando soluciones para la experiencia e interfaz de usuario llevando a cabo un proceso de diseño completo, involucrándome desde la detección de oportunidades hasta la evaluación de las soluciones tras la implementación.</p>
@@ -80,7 +80,7 @@
                         <mark>#Investigación de usuarios</mark>
                     </div>
                 </section>
-            </aside>
+            </div>
         </article>
 
         <h2>Experiencias anteriores</h2>
@@ -91,7 +91,7 @@
                 <p><i>Julio 2020 - Enero 2022 (Remoto)</i></p>
             </section>
 
-            <aside>
+            <div class="description">
                 <section  aria-label="Descripción de mi puesto como Diseñador de IU & Sistema de diseño en Genially">
                     <h5 class="secondary">Descripción</h5>
                     <p>Creando las bases del sistema de diseño, documentando, diseñando los componentes fundamentales y definiendo patrones básicos de diseño, buscando la máxima escalabilidad y con gran atención a la viabilidad de implementación dado que hasta el momento no existía sistema de diseño. Además durante esta etapa estuve participando en el diseño de la página web construyendo un sistema modular que permitiera al equipo de contenidos crear páginas a través de un content manager personalizado. También participé rediseñando diferentes partes de la IU de la aplicación.</p>
@@ -106,7 +106,7 @@
                         <mark>#Animación</mark>
                     </div>
                 </section>
-            </aside>
+            </div>
         </article>
 
         <article>
@@ -115,7 +115,7 @@
                 <p><i>Junio 2019 - Julio 2020 (Córdoba)</i></p>
             </section>
 
-            <aside>
+            <div class="description">
                 <section aria-label="Descripción de mi puesto como Diseñador gráfico en Genially">
                     <h5 class="secondary">Descripción</h5>
                     <p>Creando diseños para plantillas de creaciones de diferentes temáticas, estéticas y de contenidos, ofrecidas a través del catálogo de plantillas. También trabajé creando colecciones de recursos gráficos ofrecidos en los catálogos de recursos de la aplicación y proponiendo mejoras en la categorización, organización y gestionando todo lo relacionado con la creación y publicación de estos. Además también colaboré con el equipo de marketing en la creación de contenidos visuales para campañas comunicación.</p>
@@ -130,7 +130,7 @@
                         <mark>#Gestión de contenidos</mark>
                     </div>
                 </section>
-            </aside>
+            </div>
         </article>
 
         <article>
@@ -139,7 +139,7 @@
                 <p><i>Enero 2018 - Noviembre 2021</i></p>
             </section>
 
-            <aside>
+            <div class="description">
                 <section aria-label="Descripción de mi puesto como Diseñador gráfico independiente">
                     <h5 class="secondary">Descripción</h5>
                     <p>Creando marcas e identidades visuales corporativas, haciendo diseño editorial y haciendo motion graphics. Además también he ilustrado (algo) y he colaborado en algunos proyectos en la parte de diseño y maquetación web.</p>
@@ -156,7 +156,7 @@
                         <mark>#Cartelería</mark>
                     </div>
                 </section>
-            </aside>
+            </div>
         </article>
 
         <article>
@@ -165,7 +165,7 @@
                 <p><i>Febrero 2014 - Junio 2019</i></p>
             </section>
 
-            <aside>
+            <div class="description">
                 <section aria-label="Descripción de mi puesto como Profesional Audiovisual independiente">
                     <h5 class="secondary">Descripción</h5>
                     <p>Trabajando como director de fotografía y operador de cámara en proyectos de cine, publicidad, videoclips, vídeos corporativos, conciertos, eventos en directo, etc. También realizando tareas como Editor y Postproductor de vídeo. Y algunos trabajos de fotografía y vídeos en bodas, bautizos y comuniones además de fotografía en eventos.</p>
@@ -184,7 +184,7 @@
                         <mark>#Posproducción</mark>
                     </div>
                 </section>
-            </aside>
+            </div>
         </article>
     </section>
 
@@ -198,7 +198,7 @@
                 <p><i>Junio 2023 - <b class="accent">Actualidad </b>(Córdoba)</i></p>
             </section>
 
-            <aside>
+            <div class="description">
                 <section aria-label="Descripción de mi colaboración con CiC-Batá">
                     <h5 class="secondary">Descripción</h5>
                     <p>Llevando a cabo un proyecto de investigación para encontrar soluciones que faciliten el acceso a la tecnología y la reducción de la brecha digital en personas mayores. <a href="https://view.genially.com/65d763a85b5dfb0014dd1b29" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver documento con las conclusiones de la investigación" title="Enlace a otra página web para ver documento con las conclusiones de la investigación">Ver conclusiones<span class="emojis" aria-hidden="true"> ↗</span></a>.</p>
@@ -212,7 +212,7 @@
                         <mark>#Entrevistas</mark>
                     </div>
                 </section>
-            </aside>
+            </div>
         </article>
 
         <h2>Colaboraciones anteriores</h2>
@@ -223,7 +223,7 @@
                 <p><i>Noviembre 2013 (Jaén)</i></p>
             </section>
 
-            <aside>
+            <div class="description">
                 <section aria-label="Descripción de mi colaboración con la AJDEM">
                     <h5 class="secondary">Descripción</h5>
                     <p>Creando el cartel para el Día Nacional de la Esclerosis Múltiple donde pude desarrollar la idea, realizar la sesión fotográfica y componer el cartel.</p>
@@ -237,7 +237,7 @@
                         <mark>#Sesión de fotos</mark>
                     </div>
                 </section>
-            </aside>
+            </div>
         </article>
     </section>
 
@@ -251,11 +251,9 @@
                 <p><i>Instituto Tramontana, 2023 - <b class="accent">Actualidad </b>(Remoto)</i></p>
             </section>
 
-            <aside>
-                <section>
-                    <p><i>Titulación no reglada.</i></p>
-                </section>
-            </aside>
+            <div class="description" >
+                <p><i>Titulación no reglada.</i></p>
+            </div>
         </article>
 
         <h2>Formación anterior</h2>
@@ -273,11 +271,9 @@
                 <p><i>INESEM, 2019 (Online)</i></p>
             </section>
 
-            <aside>
-                <section>
-                    <p><i>Titulación no reglada.</i></p>
-                </section>
-            </aside>
+            <div class="description">
+                <p><i>Titulación no reglada.</i></p>
+            </div>
         </article>
 
         <article>
@@ -350,12 +346,9 @@
                 <p><i>Septiembre 2018 (Jaén)</i></p>
             </section>
 
-            <aside>
-                <section aria-label="Descripción del premio a Mejor Dirección de Fotografía">
-                    <h5 class="secondary">Descripción</h5>
-                    <p>Premio expedido por la Diputación de Jaén por el Cortometraje Habitación 205. <a href="https://jaenaudiovisual.es/palmares-del-vi-rodando-por-jaen/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver la nota de prensa" title="Enlace a otra página web para ver la nota de prensa">Ver nota de prensa<span class="emojis" aria-hidden="true"> ↗</span></a>.</p>
-                </section>
-            </aside>
+            <div class="description">
+                <p>Premio expedido por la Diputación de Jaén por el Cortometraje Habitación 205. <a href="https://jaenaudiovisual.es/palmares-del-vi-rodando-por-jaen/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver la nota de prensa" title="Enlace a otra página web para ver la nota de prensa">Ver nota de prensa<span class="emojis" aria-hidden="true"> ↗</span></a>.</p>
+            </div>
         </article>
     </section>
 
@@ -375,7 +368,9 @@
 
 <!--Footer-->
 <footer>
-    <a class="action right" href="#home" rel="noopener noreferrer" aria-label="Botón de navegación para volver al principio de la página" title="Botón de navegación para volver al principio de la página">Volver arriba<span class="emojis" aria-hidden="true"> ↑</span></a>
+    <nav>
+        <a class="action right" href="#home" rel="noopener noreferrer" aria-label="Botón de navegación para volver al principio de la página" title="Botón de navegación para volver al principio de la página">Volver arriba<span class="emojis" aria-hidden="true"> ↑</span></a>
+    </nav>
 
     <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2<span class="emojis" aria-hidden="true"> ↗</span></a>, tratando de garantizar el nivel AAA.</p>
 
